# ChangeLog for games-kids/gcompris
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-kids/gcompris/ChangeLog,v 1.102 2015/01/19 05:50:07 mr_bones_ Exp $

*gcompris-14.12 (19 Jan 2015)

  19 Jan 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +files/gcompris-14.12-build.patch, +gcompris-14.12.ebuild,
  files/gcompris-13.11-build.patch, gcompris-13.11.ebuild:
  version bump

  15 Feb 2014; Michael Sterrett <mr_bones_@gentoo.org> gcompris-13.11.ebuild:
  latest librsvg has dropped the gtk use flag (bug #501418)

  28 Jan 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/gcompris-12.11-build.patch, -files/gcompris-12.11-underlinking.patch,
  -gcompris-12.11-r1.ebuild, -gcompris-12.11.ebuild:
  old

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> gcompris-13.11.ebuild:
  Stable for x86, wrt bug #498266

  20 Jan 2014; Agostino Sarubbo <ago@gentoo.org> gcompris-13.11.ebuild:
  Stable for ppc, wrt bug #498266

  18 Jan 2014; Pacho Ramos <pacho@gentoo.org> gcompris-13.11.ebuild:
  amd64 stable, bug #498266

*gcompris-13.11 (12 Nov 2013)

  12 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org>
  +files/gcompris-13.11-build.patch, +gcompris-13.11.ebuild:
  version bump

*gcompris-12.11-r1 (26 Oct 2013)

  26 Oct 2013; Julian Ospald <hasufell@gentoo.org> +gcompris-12.11-r1.ebuild:
  migrate to python-single-r1

  26 Oct 2013; Julian Ospald <hasufell@gentoo.org> gcompris-12.11.ebuild,
  +files/gcompris-12.11-underlinking.patch:
  fix underlinking wrt #488964

  04 Jul 2013; Michael Sterrett <mr_bones_@gentoo.org> gcompris-12.11.ebuild:
  add slot to libsdl dep

  01 Feb 2013; Michael Sterrett <mr_bones_@gentoo.org> metadata.xml:
  metadata cleanup

  30 Jan 2013; Michael Sterrett <mr_bones_@gentoo.org>
  -files/gcompris-12.05-build.patch, -gcompris-12.05.ebuild:
  old

  22 Jan 2013; Agostino Sarubbo <ago@gentoo.org> gcompris-12.11.ebuild:
  Stable for x86, wrt bug #452696
