@@ -3,6 +3,6 @@ AUX gcompris-14.12-build.patch 2824 SHA256 df4213b104a3e35c8c6219e3b920a31c3a4f1
 DIST gcompris-13.11.tar.bz2 264431313 SHA256 418dad2c8f0fc90e16e97ab67b6700e3af5f33ae05d83f28f3b1117183f88c57 SHA512 c74abb948559944cb8552ee8d3f760d598b04e9962f3650fb356775df568a27f5f9436fec9fc1348af1d0802434337494a0be909ffc7adfa6873e74dcbc9cbee WHIRLPOOL d25e3d3e4504e05a43ec95457c7ac6a194738e07339c9372619f76332aefa2efc9d82e2d3583cb72e113a2f3126bca96655fc0f62a61ce86133c66a9a8405bf0
 DIST gcompris-14.12.tar.bz2 272767636 SHA256 bf0beafb03c0f4ffe05bbfcda54b91a5e8a034b5d813cb4492d6f59a21f9cdcf SHA512 b0948fcf303b335a231318dd57ef84d83cda7839e82542e5c4b9e794745561c24d64e7e76a96c63d1b0eb5a44377f2bf05b1d89f3bcab75dd2c32075e2ba5258 WHIRLPOOL 0d49a59e5fddd5e24e6e593ad53d99c7a8714b6b48dd2e3f776600366f61886c4ea15428f056cb8ae69e26024a88f3264814f80ce9e11e9d82d4f9d0adb8b056
 EBUILD gcompris-13.11.ebuild 2334 SHA256 e06ccc4e0ab0f77a14054411fbcce477b33af1bf80d06698811817d992b13c3c SHA512 532ec03edf1d2d0226db94a6be7ff321959137248c3a28654b794ccd3e101c3410233d85cc08c5af66dbada51a9f0036cc91986c05cad1614b2b5482f151e0c9 WHIRLPOOL c4c13e289f25477ab08b804f013d54034dbc40662a30b6d1c2f5e0e15d238ba30954ab057438af4a5bdcff50379640a112a4ae2f1db8d268115021470ec40907
-EBUILD gcompris-14.12.ebuild 2337 SHA256 4d9522e1e9a5c53e62765213b9b23a6051bcda40ce4f8672fd68ef1328728daf SHA512 b75b21d780a4bcd6b90b17e3c50a2851bc5a9c99ef47ea9baf1da749d1e2bf3938c507e66a6a17c6d5b8f4cd0b405a56deea8641a0989de560764cc6d872f6ec WHIRLPOOL c0b151e178fa2932d729d1d2240e56be832e5b4942ccd5b9f881eafe35ee8638bc615891ae643e55cf1ba01a3493a04b7d27d76a0a74061cf4d04dea4093aee1
-MISC ChangeLog 14961 SHA256 7915dd2223e744d87867aca10c7d3e36c7f30d3e3a5f2c02969586cd83f32f2a SHA512 acaf821075ed69abf8d465ed3ae7d5c6cb3fe902d5aac76c5f339119fcafa97773ed85718797f1800d7bd098b67e3e6c637b936c9cb20dcb827d71c7553a7b7b WHIRLPOOL bf4f85d08fe73a1475ed832f6aebc4ec488f9c3a19919f95f4231a0d447659d29c4cfc7fdf216b2724e1276627861bacd72ad9e1a00a7ec2b0f01286cde1a8dc
+EBUILD gcompris-14.12.ebuild 2144 SHA256 ccb794a95550c453844db4809984ca5a841d6566312126d4abeb920a7c8ab03e SHA512 75c884993c796516c6a5ebd702e3831c56187e839623e2c39ab1f1ab7b03471995ef659a68aa07aa9ae726183e878ec8a1a5f150f1685be5c5d164e80a65569f WHIRLPOOL bf33a478052baa0dbde46739ac9680c229d2685081f1dce6a8dba544503779ad0b33bd455a5a21d4bbfd9bdc7508d7b4ddbba7df2ff603c3a615961319eda17c
+MISC ChangeLog 15060 SHA256 591c26d3da9295c99f54059200bcd1d385d59b957c11f8210daa4e2a90cb80f1 SHA512 841289231fef9f6b2c53aa780d372cdbbadc1cb30714d708f821317b2112cad59dc10a16c38448a560ed51b44653705d3c45fc0b6b8d5601710482381160558c WHIRLPOOL 74ce2ca598d041a07468a808d58f1ce0f8cd51a7c9a2fc758349299b082442d455bc1a823a04370f8d3db4066ef2b53e15c61a3a8bc92f70d9cca92417165dad
 MISC metadata.xml 160 SHA256 5ac0a3647e8149d52ce55d391cf1680ac52d6f0330be21c3bca4790b971b5e5d SHA512 e5ae2b384aa96a402995bf0e8b4c29d38d57f1ebc44eeca71d7eda9a29431b7737c3c3a5df053e868a21c21abb457658344e7fb7c2102d4625a160273048c2db WHIRLPOOL b626c8afedc54ba9adb429cb53f860c0165702b1cea15f5c84c4e458cc94f28755ec66c5b73d9ecc155c1de70c82e1d79ba859c2124d0a78437681f2786e1246
